--- a/KASKBlog/KASKBlog/Views/Post/Create.cshtml
+++ b/KASKBlog/KASKBlog/Views/Post/Create.cshtml
@@ -4,14 +4,12 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Post</h2>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Post</legend>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
@@ -24,10 +22,10 @@
             @Html.LabelFor(model => model.Body)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Body)
+            @Html.TextAreaFor(model => model.Body, new {@cols="80" , @rows="4" })
             @Html.ValidationMessageFor(model => model.Body)
         </div>
-
+        <br />
         <p>
             <input type="submit" value="Create" />
         </p>
