--- a/KASKBlog/KASKBlog/Views/Post/Edit.cshtml
+++ b/KASKBlog/KASKBlog/Views/Post/Edit.cshtml
@@ -4,14 +4,12 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Post</h2>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Post</legend>
-
         @Html.HiddenFor(model => model.ID)
 
         <div class="editor-label">
@@ -26,10 +24,10 @@
             @Html.LabelFor(model => model.Body)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Body)
+            @Html.TextAreaFor(model => model.Body, new {@cols="80" , @rows="4" })
             @Html.ValidationMessageFor(model => model.Body)
         </div>
-
+        <br />
         <p>
             <input type="submit" value="Save" />
         </p>
